src/tests/snapshots/protocols__core__serialize__tests__simple_if.snap
---
source: src/core/serialize.rs
expression: content
---
struct Counter {
  in a: u64,
  out s: u64,
}

fn simple_if<dut: Counter>(in a: u64, out s: u64) {
  dut.a := a;
  step();
  step();
  if dut.s == 3 {
    assert_eq(dut.s, 0);
  } else {
    step();
    step();
    step();
    step();
    step();
  }
  if dut.s == 7 {
    assert_eq(dut.s, s);
  } else {
    assert_eq(dut.s, 0);
  }
}
