src/tests/snapshots/protocols__core__serialize__tests__simple_while.snap
---
source: src/core/serialize.rs
expression: content
---
struct Counter {
  in a: u64,
  out s: u64,
}

fn simple_while<dut: Counter>(in a: u64, in b: u64, out s: u64) {
  dut.a := a;
  while !(dut.s == b) {
    step();
  }
  step();
  step();
  assert_eq(dut.s, s);
}
